<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

     <TextView
         android:id="@+id/lblConvertHead1"
         style="@style/LS2SectionHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="@string/lblConversionsRatio" />
     
    <TextView
        android:id="@+id/textView1"
        style="@style/LS2Label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblConvertHead1"
        android:layout_marginTop="5dp"
        android:text="@string/conversions_lbl_ratiotopercentage" />

    <EditText
        android:id="@+id/txtRatioa"
        style="@style/LS2Input"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_below="@id/lblConvertHead1"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        style="@style/LS2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblConvertHead1"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/txtRatioa"
        android:text="@string/colon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtRatiob"
        style="@style/LS2Input"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_below="@id/lblConvertHead1"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal" >
         <requestFocus />
         </EditText>
    
    <TextView
        android:id="@+id/textView3"
        style="@style/LS2Label"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtRatioa"
        android:layout_marginTop="5dp"
        android:text="@string/conversions_lbl_percentagetoratio" />
    
    <EditText
        android:id="@+id/txtPercent"
        style="@style/LS2Input"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@+id/txtRatioa"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"  >
         <requestFocus />
         </EditText>
    
    <TextView
        android:id="@+id/textView4"
        style="@style/LS2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRatiob"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/txtPercent"
        android:text="@string/percent"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
     <TextView
         android:id="@+id/lblConvertHead2"
         style="@style/LS2SectionHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/textView3"
         android:layout_marginTop="20dp"
         android:text="@string/lblConversionsOD" />
     
      <TextView
          android:id="@+id/lblOD"
          style="@style/LS2Label"
          android:layout_width="120dp"
          android:layout_height="wrap_content"
          android:layout_below="@id/lblConvertHead2"
          android:layout_marginTop="5dp"
          android:text="@string/lblOD"
          android:textAppearance="?android:attr/textAppearanceLarge" />

      <EditText
          android:id="@+id/txtOD"
          style="@style/LS2Input"
          android:layout_width="40dp"
          android:layout_height="30dp"
          android:layout_below="@id/lblConvertHead2"
          android:layout_toRightOf="@id/lblOD"
          android:inputType="numberDecimal" />
     
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/txtOD"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="calculate"
        android:text="@string/btn_calc" />
    
    <!-- Response - global field -->
    
    <TextView
        android:id="@+id/txtAnswer1"
        style="@style/LS2Answer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>

